tests/build/widget_macro/fail/module_path_malformed1.rs
use zero_ui::core::widget2;

#[widget2($crate::)]
pub mod widget {}

fn main() {}
